tests/paczka1/fuzzy1/66459523.err
Error in line 1: 9zGk A589 91,8
Error in line 3: 2ePD4If5Rsx A589 31,8
Error in line 19: 5wFxCcTBpa A470 67,1
Error in line 20: 184WgyxW A383 33,4
